--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 # This is a .gitignore file was  created by Akshay L Aradhya
 #############################################################
 
-
+*.ico
+*.ini
 *.exe
 *.obj
 !AFDEBUG.EXE
